--- a/myShop/Myshop.core/Myshop.core.csproj
+++ b/myShop/Myshop.core/Myshop.core.csproj
@@ -44,7 +44,15 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Productcategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ProductManagerViewModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Myshop.services\Myshop.services.csproj">
+      <Project>{20c247be-0033-448b-b202-f91f305e752e}</Project>
+      <Name>Myshop.services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
