--- a/myShop/Myshop.core/Myshop.core.csproj
+++ b/myShop/Myshop.core/Myshop.core.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="Models\BaseEntity.cs" />
+    <Compile Include="Models\Basket.cs" />
+    <Compile Include="Models\BasketItem.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Productcategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
