--- a/myShop/MyshopDataccess.SQL/MyshopDatAccess.SQL.csproj
+++ b/myShop/MyshopDataccess.SQL/MyshopDatAccess.SQL.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Migrations\202110271022038_initial.designer.cs">
       <DependentUpon>202110271022038_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110280623191_AddBasket.cs" />
+    <Compile Include="Migrations\202110280623191_AddBasket.designer.cs">
+      <DependentUpon>202110280623191_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -74,6 +78,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202110271022038_initial.resx">
       <DependentUpon>202110271022038_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110280623191_AddBasket.resx">
+      <DependentUpon>202110280623191_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
