--- a/myShop/Myshop.core/Myshop.core.csproj
+++ b/myShop/Myshop.core/Myshop.core.csproj
@@ -45,11 +45,14 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Contracts\IBasketService.cs" />
+    <Compile Include="Contracts\IOrderService.cs" />
     <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Basket.cs" />
     <Compile Include="Models\BasketItem.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Productcategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
