--- a/myShop/Myshop.services/Myshop.services.csproj
+++ b/myShop/Myshop.services/Myshop.services.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="BasketService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
