--- a/myShop/MyshopDataccess.SQL/MyshopDatAccess.SQL.csproj
+++ b/myShop/MyshopDataccess.SQL/MyshopDatAccess.SQL.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202110291118586_AddCustomers.Designer.cs">
       <DependentUpon>202110291118586_AddCustomers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111010747194_AddedOrders.cs" />
+    <Compile Include="Migrations\202111010747194_AddedOrders.Designer.cs">
+      <DependentUpon>202111010747194_AddedOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -94,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110291118586_AddCustomers.resx">
       <DependentUpon>202110291118586_AddCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111010747194_AddedOrders.resx">
+      <DependentUpon>202111010747194_AddedOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
